# hexforge-surface-engine

./: .gitignore  Dockerfile  INTERFACES.md  README-contract.md  README.md  pyproject.toml  requirements.txt
docs/: INTEGRATION_REPORT.md  QUICK_START.md
hse/: main.py
hse/api/: routes.py
legacy_hse/core/: config.py  paths.py
lib/: contract_adapter.js  contracts.js  index.js  surface_paths.js
schemas/boards/: pi4b.json  pico.json
schemas/boards/presets/: pi4b_case.json
scripts/: create_job.sh  get_job.sh  run_surface_worker.py  smoke_surface_job.py  validate_surface_v1.sh  verify_assets.sh  verify_contracts.sh
src/: main.py
src/hexforge_surface_engine.egg-info/: SOURCES.txt  top_level.txt
src/hse/: __init__.py  app.py  config.py  main.py
src/hse/api/: routes.py
src/hse/contracts/: envelopes.py  jobs_contracts.py
src/hse/fs/: paths.py  writer.py
src/hse/models/: job.py
src/hse/routes/: jobs.py
src/hse/schemas/: surface_job.schema.json
src/hse/utils/: boards.py
src/hse/workers/: surface_worker.py
