[project]
name = "hexforge-surface-engine"
version = "0.1.0"
description = "HexForge Surface Engine (HSE) - texture-first surface + enclosure generation API"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
]

[tool.uvicorn]
factory = false

[tool.ruff]
line-length = 100
